# DigitalTwin-api

./: Dockerfile  README.md  compose.yaml  dados_hackathon_veiculos.csv  dados_hackathon_veiculos.xlsx  entrypoint.sh  gerar.py  pyproject.toml  semear.py  site.py  test.db
migrations/: env.py
migrations/versions/: e0bf85fbf814_create_users_table.py  ef67f68c77a9_adicionando_tabela_do_estacionamento.py
src/api/: app.py  database.py  models.py  schemas.py  security.py
src/api/routers/: auth.py  estaccionamento.py  users.py
